trying to upload